[gd_scene load_steps=8 format=3 uid="uid://c8h0l611mr476"]

[ext_resource type="Script" uid="uid://bkhquub1c1yle" path="res://scripts/monsters/monsterAquatic.gd" id="1_i73a5"]
[ext_resource type="Texture2D" uid="uid://bh2rtfjsdh2v2" path="res://assets/Sketches/personajes-demogorgon_0003_dagon-copia-2.png" id="2_lcqqe"]
[ext_resource type="PackedScene" uid="uid://tv8hlohyhaex" path="res://scenes/commons/hp_system.tscn" id="3_tla12"]
[ext_resource type="PackedScene" uid="uid://50khjaacijk3" path="res://scenes/UI/hp_bar.tscn" id="4_w5nxb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w5nxb"]
radius = 1720.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tfl2c"]
radius = 33.0
height = 192.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tla12"]
radius = 66.0
height = 276.0

[node name="MonsterAquatic" type="CharacterBody2D"]
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
script = ExtResource("1_i73a5")

[node name="Detector_Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_Area2D"]
shape = SubResource("CircleShape2D_w5nxb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.38419e-07, -2.38419e-07)
texture = ExtResource("2_lcqqe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_tfl2c")

[node name="Monitoring_Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Monitoring_Area2D"]
shape = SubResource("CapsuleShape2D_tla12")

[node name="Monitorable_Area2D" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Monitorable_Area2D"]
shape = SubResource("CapsuleShape2D_tla12")

[node name="HP_System" parent="." instance=ExtResource("3_tla12")]

[node name="HP_Bar" parent="." instance=ExtResource("4_w5nxb")]

[connection signal="area_entered" from="Detector_Area2D" to="." method="_on_detector_area_2d_area_entered"]
[connection signal="area_exited" from="Detector_Area2D" to="." method="_on_detector_area_2d_area_exited"]
[connection signal="area_entered" from="Monitoring_Area2D" to="." method="_on_monitoring_area_2d_area_entered"]
